Added full Readme description
