# src/core/domain/CommentModel.js
@@ -8,12 +8,14 @@ class Comment {
   /**
    * @param {*} name 
    * @param {*} userId 
+   * @param {*} postId
    * @param {*} comment 
    */
-  constructor(name, userId, comment) {
+  constructor(name, userId, postId, comment) {
     this.name = name;
     this.comment = comment;
     this.userId = userId;
+    this.postId = postId;
     // this.numberOfLikes = 0;
   }
 }
